      "experimental", since it seems to have worked fine for ages.
    - Fix a user-triggerable segfault in expand_filename().  (There isn't
      a way to trigger this remotely.)

  o Code simplifications and refactoring:
    - Revamp file-writing logic so we don't need to have the entire contents
      of a file in memory at once before we write to disk.  Tor, meet stdio.


Changes in version 0.2.0.6-alpha - 2007-08-26
  o New directory authorities:
    - Set up Tonga as the default bridge directory authority.

  o Major features:
    - Directory authorities now track servers by weighted
      mean-times-between-failures. When we have 4 or more days of data,
      use measured MTBF rather than declared uptime to decide whether
      to call a router Stable. Implements proposal 108.

  o Major bugfixes (load balancing):
    - When choosing nodes for non-guard positions, weight guards
      proportionally less, since they already have enough load. Patch
      from Mike Perry.
    - Raise the "max believable bandwidth" from 1.5MB/s to 10MB/s. This
      will allow fast Tor servers to get more attention.
    - When we're upgrading from an old Tor version, forget our current
      guards and pick new ones according to the new weightings. These
      three load balancing patches could raise effective network capacity
      by a factor of four. Thanks to Mike Perry for measurements.

  o Major bugfixes (descriptor parsing):
    - Handle unexpected whitespace better in malformed descriptors. Bug
      found using Benedikt Boss's new Tor fuzzer! Bugfix on 0.2.0.x.

  o Minor features:
    - There is now an ugly, temporary "desc/all-recent-extrainfo-hack"
      GETINFO for Torstat to use until it can switch to using extrainfos.
    - Optionally (if built with -DEXPORTMALLINFO) export the output
      of mallinfo via http, as tor/mallinfo.txt. Only accessible
      from localhost.

  o Minor bugfixes:
    - Do not intermix bridge routers with controller-added